--- a/templates/registrar.html
+++ b/templates/registrar.html
@@ -24,10 +24,10 @@
         <input type="text" required name="nombre">
         <br>
         <label for="estatura">Estatura: </label>
-        <input type="text" required name="estatura">
+        <input type="number" required name="estatura">
         <br>
         <label for="peso">Peso: </label>
-        <input type="text" required name="peso">
+        <input type="number" required name="peso">
         <br>
         <label for="nacimiento">Fecha nacimiento: </label>
         <input type="date" required name="nacimiento">
