--- a/templates/editar.html
+++ b/templates/editar.html
@@ -24,7 +24,7 @@
         <input type="number" value="{{dep[2]}}"required name="peso">
         <br>
         <label for="nacimiento">Fecha de nacimiento: </label>
-        <input type="date" value="{{dep[2]}}"required name="nacimiento">
+        <input type="date" value="{{dep[2]}}" name="nacimiento">
         <br><br>
         <input type="submit" value="Guardar">
         <a href="/">Regresar</a>
