--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
     <title>Gestión de deportistas</title>
 </head>
 
@@ -17,7 +18,7 @@
                 <th>Nombre</th>
                 <th>Estatura</th>
                 <th>Peso</th>
-                <th>Fechas</th>
+                <th>Fecha de nacimiento</th>
             </tr>
         </thead>
         <tbody>
